[tool.poetry]
name = "latent-cartography"
version = "0.1.0"
description = ""
authors = ["fergus <fergusfettes@gmail.com>"]
readme = "README.md"
packages = [
    { include = "latent_cartography" },
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.2"
torch = "^2.2.0"
nnsight = "^0.1.18"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.21.0"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
